# SafeSpace

./: ai_agent.py  frontend.py  main.py  pyproject.toml  requirements.txt  tools.py
backend/: ai_agent.py  main.py  requirements.txt  tools.py
